Change Log for OpenXava project
===============================

- Fix: Date/time fields in chinese produce a parsing error on saving.
- Some new common use labels to be used in applications.
- Fix: Popup windows for showing more events in calendar day is transparent with Dark theme.
- Fix: Filter in list fails with a date with @DateTime in Dutch.
- Fix: Date/time fields in Chinese change the value of AM/PM when viewing a record in detail mode.
- Fix: @ReadOnly properties are always editable on create.
- Article in documentation about automatically generating all Java entity code from an existing database.
- Fix: The module freezes when there are many dates for a month in calendar format. 

OpenXava 7.2.1 (2023-12-7)
--------------------------
- HtmlUnit upgraded to 3.9.0.
- Commons IO upgraded to 2.15.1. 
- POI and POI OOXML upgraded to 5.2.5.
- Groovy upgraded to 4.0.16.
- Embedded Tomcat used in development upgraded to 9.0.83.
- Driver version in doc and new projects upgraded for PostgreSQL, Db2 and Firebird.
- Fix: @OnChange on @ManyToOne not work if referenced model has nested composite keys with only references.
- Fix: Remote Code Execution (RCE) vulnerability via XSTL from dependencies.
- Fix: Attribute idProperties of @Tree annotation ignored.
- Fix: Application name in automated testing doc starts with uppercase, so tests do not work with v7.
- Fix: Spanish screenshot in English @Tree reference documentation.
- Fix: Modules with dates annotated with DATETIME or FECHAHORA stereotypes do not show week and day views.
- Fix: When navigating by records with the tree editor the tree collapses.
- Fix: Attribute pathSeparator of @Tree annotation ignored.
- Fix: @OnChange action in @Coordinates does not work.
- Fix: Vulnerable JavaScrit code using eval() in @Coordinate editor.
- Fix: Popup calendar for data fields is not in Greek when browser language is Greek.
- Fix: @OnChange action in upload editor (@File, @Files, PHOTO, etc)  does not work.